...
    <string name="welcome_back">Welcome back</string>
    <string name="invalid_email">Email does not match</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="continue_dialog">Continue</string>
    <string name="password">Password</string>
    <string name="input_email">Your email has not been filled in</string>
    <string name="input_password">Your password has not been filled in</string>
    <string name="log_out">Logout</string>
    <string name="are_your_sure">Are you sure?</string>
    <string name="time">10 April 2024</string>
...
